Changelog
=========

2.0
---

- Specified package dependencies.
  [hannosch]


1.1  August 19, 2008
--------------------

- Added missing customized version of login_failed.cpt which was causing an
  error on a failed standard login when OpenID support is installed.  This closes
  http://dev.plone.org/plone/ticket/7268
  [davisagli]

- Now including plone.app.portlets in the zcml.  Fixes zope instance
  startup error under certain circumstances.
  [maurits]


1.0.3  April 21, 2008
---------------------

- Added missing i18n markup to portlets.xml.
  [hannosch]

- Fixed erroneous (duplicate) translation ID. This fixes
  http://dev.plone.org/plone/ticket/7764
  [limi]


1.0.2  March 7, 2008
----------------------

- Correct the title of the portlet type to read 'OpenID Login' instead of
  just 'Login'.
  [wichert]


1.0.1  August 17, 2007
----------------------

- Remove use of javascript in login portlet
  [ree]


1.0  August 15, 2007
--------------------

- First stable release.
  [wichert]
