@@ -34,8 +34,8 @@ setup(name='plone.app.openid',
         'plone.portlets',
         'plone.app.portlets',
         'zope.component',
+        'zope.i18nmessageid',
         'zope.interface',
-        'Plone',
         'Products.CMFCore',
         'Products.PlonePAS',
         # 'Zope2',
